--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -177,7 +177,7 @@
                         
                         <h4 class="mb-3">
 			     Одолеть Говерлу. Искупаться в горном озере. Наесться до отвала ягод и грибов.
-				<span id="goldenDunes">Отдых в горах!</span>
+				<span id="HolidaysInTheMountains">Отдых в горах!</span>
                         </h4>
                         <p class="mb-3 bg-success text-white text-center">
 			    Заезды с июля по сентябрь 2021 (каждую неделю) <img src="/images/Emoji/1f600.png" alt="" height="20px">
