--- a/page-Askania-Nova-Safari.html
+++ b/page-Askania-Nova-Safari.html
@@ -406,6 +406,27 @@
                                 </li>
                             </ul>
                         </div>
+			
+			<div class="alert alert-danger">
+                            <h5 class="alert-heading">Дополнительно оплачивается:</h5>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item list-group-item-danger ">
+                                    Мы подскажем где покушать, но оплатить прийдеться Вам
+                                    <img src="/images/Emoji/1f642.png" alt="" height="20px">
+                                </li>
+                                <li class="list-group-item list-group-item-danger ">
+                                    Группе будет предложено посещение Арабатских термов по-желанию <b>200 грн. </b>
+                                    <i>(цена актуальная на май 2021, точные расценки узнаем за 2-3 дня до выезда);</i>
+                                </li>
+                                <li class="list-group-item list-group-item-danger ">
+                                    Проезд до места выезда группы и обратно;
+                                </li>
+                                <li class="list-group-item list-group-item-danger ">
+                                    Экскурсия "Ретросафари" <b>250 грн./чел -2 часа.</b>
+                                </li>
+                            <ul>
+                        </div>
+				    
                     <!-- owl-carousel -->
                   <!--
                <div class="owl-carousel owl-theme" style="margin: 0 auto; padding-bottom: 30px;">
