--- a/packages.html
+++ b/packages.html
@@ -204,7 +204,34 @@
                     </div>
                 </div>
                 <!--  //Яхтклуб И AQUAZOO  -->
-
+                
+                <!--  Аскания Нова Сафари  -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-Askania-Nova-Safari.html">
+                            <img src="images/Askania-Nova-Safari/home-Askania-Nova-Safari.jpg" alt="baloon-fast"
+                                class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>1570грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Херсонская обл.</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-Askania-Nova-Safari.html">
+                                Аскания Нова Сафари
+                            </a>
+                        </h5>
+                        <p class="">
+                            Животные Аскании ждут гостей...
+                        </p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 23 - 24 Августа 2021 Года </span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Аскания Нова Сафари  -->
+                
                 <!--  Львята и лошадки  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
