--- a/packages.html
+++ b/packages.html
@@ -320,7 +320,7 @@
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Six-Days-in-the-Carpathians.html">6 Дней в Карпатах</a>
                         </h5>
-                        <p class="">Расписание экскурсии...</p>
+                        <p class="">Расписание экскурсии в Карпаты</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>2021 Год</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>6 Дней</span></li>
