--- a/page-Yacht-club-and-Aquazoo.html
+++ b/page-Yacht-club-and-Aquazoo.html
@@ -328,9 +328,17 @@
 						<a title="Facebook" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fnovipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html" target="_blank" rel="noopener">
 						   Facebook
 						</a>, 
+						<!-- Telegram -->
+						<a  title="Telegram"  href="https://t.me/share/url?url=https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html" target="_blank" >
+							<img src="images/tele-icon.svg" alt="telegram" height="20px">
+						</a>
+						<a  title="Telegram"  href="https://t.me/share/url?url=https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html" target="_blank" >
+						    Telegram
+						</a>,
+						<!-- //Telegram -->
 					    обязательно отмечаем @dovgalyv.zp, Довгаль Юлия, @novipovorot,
 					    всем кто отметит +10000 в карму и наша благодарочка 
-						<img src="/images/Emoji/1f604.png" alt="" height="20px">
+						<img src="/images/Emoji/1f604.png" alt="smile" height="20px">
                                         </p>
                                     </div>
                                 </div>
