--- a/page-Yacht-club-and-Aquazoo.html
+++ b/page-Yacht-club-and-Aquazoo.html
@@ -331,8 +331,8 @@
 						<!-- Telegram -->
 						<a  title="Telegram"  href="https://t.me/share/url?url=https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html" target="_blank" >
 							<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-							 x="0px" y="0px" width="128px" height="128px" viewBox="0 0 128 128" enable-background="new 0 0 128 128"
-							 xml:space="preserve">  <image id="image0" width="25" height="25" x="0" y="0"
+							 x="0px" y="0px" width="25" height="25" viewBox="0 0 128 128" enable-background="new 0 0 128 128"
+							 xml:space="preserve">  <image id="image0" width="128" height="128" x="0" y="0"
 							    xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAACBjSFJN
 							AAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAABmJLR0QA/wD/AP+gvaeTAAAA
 							CXBIWXMAAA7EAAAOxAGVKw4bAAASAElEQVR42u2de4xc1X3HP+feee97x/te4wC1oRAIEIohTYBS
