--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -122,7 +122,7 @@
                         
                        <p class="txt-alg-jf">
                             МЕГА ТУР! ВСЕГО 1 РАЗ В 2021 ГОДУ! <img src="https://github.githubassets.com/images/icons/emoji/unicode/1f604.png" alt="" height="20px">
-			       <span id="ExcursionToZaporozhye">Экскурсия из Запорожье.</span>
+			       <span id="ExcursionToZaporozhye">Экскурсия из Запорожья.</span>
                         </p>
                         <p class="txt-alg-jf">
                            Самое потрясающее красивое место Украины - остров Джарылгач
