--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -287,9 +287,9 @@
 					<h5>24 июля</h5>
                                         <p><strong>06:30 </strong>
 						Выезд из Центра <span id="Zaporozhye">Запорожья</span> после минутки позитива.
-					   Едем на МЯГКОМ И УЮТНОМ ТРАНСПОРТЕ тур.класса (раскладные сидения), TV 
+					   Едем на МЯГКОМ И УЮТНОМ ТРАНСПОРТЕ тур. класса (раскладные сидения), TV 
 					 <img src="images/Emoji/tv.png" alt="" height="20px">
-					Заберем Вас Металлургов-Фестивальная-Авто и жд вокзалы 
+					Заберем Вас Металлургов-Фестивальная-Авто и Ж/Д вокзалы 
 					<i>(уточняйте при бронировании, можем подобрать по пути в Васильевке 
 						или из сел по дороге в сторону Скадовска). </i>
 	
@@ -307,7 +307,7 @@
 						<i>(доп.расход - 100 грн. - 450 г. порция)</i> или борщ - <i>(доп.расход - 60 грн.)</i>.
 					    Купаемся и загораем, получаем полный кайфффф от отдыха. 
 					    Делаем потрясающие фото и видео.
-					    Ужинаем там-же <i>(доп.расход: гречка с мясом - 70 грн., макароны с котлеткой – 60 грн.)</i>
+					    Ужинаем там же <i>(доп.расход: гречка с мясом - 70 грн., макароны с котлеткой – 60 грн.)</i>
 					    Кайфуем весь оставшийся день и ночь. 
                                         </p>   
  
@@ -322,17 +322,17 @@
 					    Морская экскурсия с купанием. Мы узнаем историю Украинских
 						Мальдив и его <span id="mysteriousLighthouses">загадочных маяков</span>. Любовь, страсти, 
 					    удивительные приключения и романтические истории все это 
-					    нам расскажет потрясающий местный экскурсовод. Море эмоциий и впечатлений. 
+					    нам расскажет потрясающий местный экскурсовод. Море эмоций и впечатлений. 
                                         </p>
 					<p><strong>12:00 - 13:00 </strong>
-                                            Время пообедать <i>(доп.расход: )</i> и собраться в дорогу. 
+                                            Время пообедать <i>(доп.расход)</i> и собраться в дорогу. 
 					    Обедаем вкуснейшей ухой со ската <i>(доп.расход - 100 грн. - 450 г. порция)</i>
 					    или борщ - <i>(доп.расход 60 грн.)</i>. Выселяемся и отправляемся на катере в Скадовск. 
 					    Время возвращаться домой.
                                         </p>
 					<p><strong>20:00 - 21:00 </strong>
                                             Мы уже в Запорожье! В ПОЛНОМ ВОСТОРГЕ ОТ ЭКСКУРСИИ! 
-					    С ПРЕКРАСНЫМ НАСТРОЕНИЕМ ОТДЫХАЕМ И ВЫКЛАДЫВАЕМ ФОТО .
+					    С ПРЕКРАСНЫМ НАСТРОЕНИЕМ ОТДЫХАЕМ И ВЫКЛАДЫВАЕМ ФОТО. 
 					    Не забывайте отмечать наши странички, +10000 в карму и искренняя наша благодарочка.  
 						<img src="/images/Emoji/1f607.png" alt="" height="20px">
                                         </p>
