--- a/page-Yacht-club-and-Aquazoo.html
+++ b/page-Yacht-club-and-Aquazoo.html
@@ -127,7 +127,7 @@
 				<span id="HousesOnTheWater"> Домики на воде </span>- Бали в миниатюре.
 			 Белые павлины, барашки, гусики и многие другие животные гуляющие по Яхтклубу. 
 				Это удивление и восторг!  <span id="TouchingZoo"> Трогательный зоопарк</span>, где можно кормить и гладить зверушек. 
-				Вкусные домашние обеды по-сельски и даже <span id="Mini-pool"> мини-бассейн</span>. Этот отдых для тебя  
+				Вкусные домашние обеды по сельски и даже <span id="Mini-pool"> мини-бассейн</span>. Этот отдых для тебя.  
 			 Ждем Вас, Ваших родных, близких и друзей на экскурсию! Собери компанию 12 человек, 13 едет бесплатно 
 				<img src="/images/Emoji/1f642.png" alt="" height="20px">
                         </p>
@@ -251,13 +251,13 @@
 					    сельских жителей ферм и просто красивое место. 
 					    Слушаем истории жителей зоопарка, знакомимся,
 					    кормим всех кого можно кормить, гладим и делаем крутые фоточки. 
-					    По-желанию обедаем вкуснейшим обедом и купаемся в бассейне 
+					    По желанию обедаем вкуснейшим обедом и купаемся в бассейне 
 						<i>(дополнительная оплата 60/40 грн.)</i>	 
                                         </p>
 					<p><strong>14:40-16:40  </strong>
                                             Крутяк! Мы на Бали, шикарные домики на воде. 
 					    Вокруг белые и зеленые павлины. Полнейший восторг. 
-					    Неспешно гуляем по Яхт Клубу.
+					    Неспешно гуляем по Яхтклубу.
  					    Делаем фоточки и видосы на память. 
 					    По желанию организовываем групповую прогулку на яхте 1 час.
                                         </p> 
