--- a/page-Askania-Nova-Safari.html
+++ b/page-Askania-Nova-Safari.html
@@ -123,7 +123,7 @@
                         </h4>
                         
                         <p class="txt-alg-jf">
-                            Отдых на море, <span id="ExcursionToZaporozhye">экскурсии из Запорожье</span> в самых красивых уголках Южной Украины! 
+                            Отдых на море, <span id="ExcursionToZaporozhye">экскурсии из Запорожья</span> в самых красивых уголках Южной Украины! 
 			    <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
 			    <span id="RareAnimalsOfAskania">Редкие животные Аскании</span> ждут Вас в гости.
 				Этот тур наполнит Ваши сердца <span id="SunAndSea">Солнцем и Морем!</span> <img src="/images/Emoji/1f60d.png" alt="smile" height="20px">
@@ -229,7 +229,7 @@
                                                 <strong>08:00</strong>
                                                 Выезд из Центра Запорожья после минутки позитива.
 						    <img src="/images/Emoji/1f604.png" alt="smile" height="20px">
-                                                Едем на МЯГКОМ И УЮТНОМ ТРАНСПОРТЕ тур.класса (раскладные сидения), 
+                                                Едем на МЯГКОМ И УЮТНОМ ТРАНСПОРТЕ тур. класса (раскладные сидения), 
 						    <img src="images/Emoji/tv.png" alt="TV" height="20px">
 						    TV
                                                 (ЛЕГКАЯ ДОРОГА).
@@ -282,7 +282,7 @@
                                             <hr>
                                             <h5>24 августа</h5>
                                             <p><strong>08:00 - 09:00</strong>
-                                                Кушаем, все кто успел купаються разок-другой в море и в путь...
+                                                Кушаем, все кто успел идет купаться разок - другой в море и в путь...
                                             </p>
                                             <p>
                                                 <strong>11:00 - 16:00</strong>
