--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -130,7 +130,7 @@
 			 </p>
 			   
                         <p class="txt-alg-jf">
-				За 1 день <span id="ExcursionToZaporozhye">экскурсии из <span id="Zaporozhye">Запорожье</span></span>
+				За 1 день <span id="ExcursionToZaporozhye">экскурсии из <span id="Zaporozhye">Запорожья</span></span>
 				с нами ВЫ получите заряд здоровья и отличного настроения,
                                 забудете Ваши печали и заботы, проведете время <span id="travels">путешествуя</span>
 				с близкими! Безопасно, комфортно, весело <span id="tourism">в туризме</span>!
@@ -142,7 +142,7 @@
 				беcчисленное количество спасенных жизней животных - 
 				Александр Пылышенко гордость нашего Запорожского края!
 				Едем в Зоопарк созданный его семьей, любоваться малышами 
-				львятками, енотиками, тиграми, львами и другими воспитаниками! 
+				львятками, енотиками, тиграми, львами и другими воспитанниками! 
 				Все кто едет с нами кроме оплаты входного билета в Центр Пылышенко
 				дарят дополнительные средства, а именно Новый поворот 50%
 				от поездки*(от прибыли ТА) передаст Центру Пылышенко на питание львам!
@@ -172,23 +172,23 @@
                             <br />
                             <span class="txt-alg-jf">
                                 Цена билета до <strong>03.07</strong> <u>350 грн.</u> - от 6 до 200 лет, <u>300 грн.</u> 4 - 6 лет, до 
-                                4х бесплатно (без предоставления отдельного места в транспорте). 
+                                4-х бесплатно (без предоставления отдельного места в транспорте). 
                             </span>
                             <hr>
                             <span class="txt-alg-jf">
 				При брони до <strong>23.07</strong> <u>365 грн.</u> - от 6 до 200 лет, <u>315 грн.</u> 4 - 6 лет, 
-				до 4х бесплатно (без предоставления отдельного места в транспорте).
+				до 4-х бесплатно (без предоставления отдельного места в транспорте).
 			     </span>
                             <hr>    
 			    <span class="txt-alg-jf">
 				При брони с <strong>24.07</strong> <u>380 грн.</u> - от 6 до 200 лет, <u>325 грн.</u> 4 - 6 лет, 
-				до 4х бесплатно (без предоставления отдельного места в транспорте).
+				до 4-х бесплатно (без предоставления отдельного места в транспорте).
 			    </span>
                             <hr>
 			    <i>Ждем Вас, Ваших родных, близких и друзей на экскурсию!</i><br>
 			    <span class="txt-alg-jf">
 				Цена билета с экскурсией по конному комплексу <u>400 грн.</u> от 6 до 200 лет, <u>350 грн.</u> 4-6 лет,
-				до 4х бесплатно (без предоставления отдельного места в транспорте).
+				до 4-х бесплатно (без предоставления отдельного места в транспорте).
 			    </span>
                             <hr>
 			   <i>
@@ -281,7 +281,7 @@
                                         </p>
 					    
                                         <p><strong>10:00-13:00 </strong>
-                                            Черные, белые, шоколадного цвета, большие жеребцы , маленькие понни и не только...
+                                            Черные, белые, шоколадного цвета, большие жеребцы, маленькие понни и не только...
 					    Каких лошадок любите ВЫ? Покататься на этих красавчиках или послушать экскурсию 
 					    о лошадках, а может и то и другое! Хватит времени на все! 
 					    Даже немного полюбоваться видами Каховского водохранилища. 
@@ -291,8 +291,8 @@
                                             Мы в Центре Пылышенко, слушаем удивительную историю создания 
 					    Зоопарка и знакомимся с животными: милыми мишками, смешными енотиками, 
 					    величественными тирами и конечно грациозными львами! Делаем самые красивые 
-					    фото на память. Посещаем уютное кафе с хот-догами,картшкой фри, мороженным и  кофе.
-					    Кого-же мы увидим: смешных енотиков, быструю носуху, красивейших тигров и львов,
+					    фото на память. Посещаем уютное кафе с хот - догами, картшкой фри, мороженным и  кофе.
+					    Кого же мы увидим: смешных енотиков, быструю носуху, красивейших тигров и львов,
 					    ведь в зоопарке они живут семьями, белого тигра, рысь, гепарда, дикую кошку,
 					    обезьянок, попугайчиков, огромных и добрых мясоедов, сластен мишек и еще много разных 
 					    животных, ведь с каждым днем зоопарк растет и развивается! 
