--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -183,12 +183,13 @@
 			    Заезды с июля по сентябрь 2021 (каждую неделю) <img src="/images/Emoji/1f600.png" alt="" height="20px">
 			</p>
                         <p class="txt-alg-jf">
-                           Красивейшие <span id="LandscapesOfTheCarpathianMountains">пейзажи Карпатских гор.</span> <span id="WesternUkraineFromZaporozhye"> Западная Украина из Запорожья </span>
+                           Красивейшие <span id="LandscapesOfTheCarpathianMountains">пейзажи Карпатских гор.</span> 
+				<span id="WesternUkraineFromZaporozhye"> Западная Украина из Запорожья </span>.
 		           Cвежее <span id="BreathOfTheEvergreenForest"> дыхание вечнозеленого леса. </span>
 			   Чистота озер, самобытная культура края.
 			</p>
 			<p class="txt-alg-jf">
-			  Новые друзья, незабываемые впечатления. <span id="ExcursionToZaporozhye"> Экскурсии из Запорожье </span> в
+			  Новые друзья, незабываемые впечатления. <span id="ExcursionToZaporozhye"> Экскурсии из Запорожья </span> в
 				<span id="BukovelYaremcheSolotvino">Буковель, Яремче, Солотвино.</span> 
 				Восхождение на Говерлу, сбор грибов и ягод… Возможность в <span id="tourism">туризме</span> отдохнуть от жары и 
 			  суеты шумного города и зарядиться бодростью и здоровьем на весь год !
@@ -459,7 +460,7 @@
 						Красивейшие пейзажи, открывающиеся из озера, и чистый 
 						горный воздух не оставят равнодушными ни одного человека,
 						кто посетит это место. Можно прогуляться по окрестностям озера,
-						позагорать и покупаться <i>(вода как правило не холодная)</i>, 
+						позагорать и покупаться <i>(вода, как правило не холодная)</i>, 
 						также Вас ждет мастер-класс по приготовлению Гуцульской
 						грибной юшки и чемпионат по стрельбе из лука… После ужина — 
 						праздничный вечер в отеле с дискотекой или караоке
@@ -664,7 +665,7 @@
                                 </li>
 				<li class="list-group-item list-group-item-danger ">
 					проезд на вездеходах <i>(Газ-66</i> 
-					на факультативные экскурсии <i>(по желанию, можно не ехать и остаться на Драгобрате):</i>
+					на факультативные экскурсии <i>(по желанию, можно не ехать и остаться в Драгобрате))</i>
 					от <b>100 до 400 грн.</b>  за одну экскурсию
 					<img src="/images/Emoji/1f609.png" alt="smile" height="20px">
                                 </li>  
