--- a/page-Yacht-club-and-Aquazoo.html
+++ b/page-Yacht-club-and-Aquazoo.html
@@ -524,7 +524,14 @@
 						   Twitter
 						</a>,
 						<!-- //Twitter -->
-						
+						<!-- Viber -->
+						<a  title="Viber"  href="viber://forward?text=https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html" target="_blank" > 
+						    Viber
+						</a>
+						<a  title="Viber"  href="viber://forward?text=https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html" target="_blank" > 
+						    Viber
+						</a>,
+						<!-- //Viber -->
 					    обязательно отмечаем @dovgalyv.zp, Довгаль Юлия, @novipovorot,
 					    всем кто отметит +10000 в карму и наша благодарочка 
 						<img src="/images/Emoji/1f604.png" alt="smile" height="20px">
