--- a/page-Yacht-club-and-Aquazoo.html
+++ b/page-Yacht-club-and-Aquazoo.html
@@ -526,7 +526,7 @@
 						<!-- //Twitter -->
 						<!-- Viber -->
 						<a  title="Viber"  href="viber://forward?text=https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html" target="_blank" > 
-						    <img src="images/viber.jpg" alt="viber">
+						    <img src="images/viber.jpg" alt="viber"  height="20px" style="margin-top:-17px;">
 						</a>
 						<a  title="Viber"  href="viber://forward?text=https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html" target="_blank" > 
 						    Viber
