--- a/page-Yacht-club-and-Aquazoo.html
+++ b/page-Yacht-club-and-Aquazoo.html
@@ -532,6 +532,14 @@
 						    Viber
 						</a>,
 						<!-- //Viber -->
+						<!-- VK -->
+						    <a href="https://vk.com/share.php?url=https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html"  target="_blank">
+							 <img src="images/vk.jpg" alt="vk"  height="25px" style="margin-top:-17px;"> 
+						    </a>
+						    <a href="https://vk.com/share.php?url=https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html"  target="_blank">
+							VK    
+						    </a>
+						<!-- //VK ->
 					    обязательно отмечаем @dovgalyv.zp, Довгаль Юлия, @novipovorot,
 					    всем кто отметит +10000 в карму и наша благодарочка 
 						<img src="/images/Emoji/1f604.png" alt="smile" height="20px">
