--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="Tуры выходного дня 'Новый поворот'" />
     <meta name="description"
-        content="Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net | Экскурсии | Путешевствия | Походы | Мастер-классы | Дегустации">
+        content="Отзывы, О Путешествиях Вместе С Нами | Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net ">
 
     <!-- Open Graph data-->
     <meta property="og:title" content="Туры выходного дня 'Новый поворот' | Отзывы">
