--- a/booking.html
+++ b/booking.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="Туры выходного дня 'Новый поворот', Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации, Автобусные туры из Запорожья" />
     <meta name="description"
-        content="Свяжитесь С Нами | Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net ">
+        content="Забронируйте Тур | Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net ">
 
     <!-- Open Graph data-->
     <meta property="og:title" content="Туры выходного дня 'Новый поворот' | Забронируйте Тур">
