--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <title>Контакты | Новый поворот</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="keywords" content="Туры выходного дня 'Новый поворот', Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации" />
+    <meta name="keywords" content="Контакты | Туры выходного дня 'Новый поворот', Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации" />
     <meta name="description"
         content="Свяжитесь С Нами | Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net ">
 
