--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net | Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации, Автобусные туры из Запорожья ">
     
-    <meta name="keywords" content="Туры выходного дня 'Новый поворот', Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации, Автобусные туры из Запорожья" />
+    <meta name="keywords" content="Главная, Туры выходного дня 'Новый поворот', Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации, Автобусные туры из Запорожья" />
     
     <!-- bing -->
     <meta name="msvalidate.01" content="5FF6079A376F982853FAC2C48BDDAB73" />
