--- a/about.html
+++ b/about.html
@@ -84,6 +84,18 @@
     <!-- about -->
     <section class="about py-5">
         <div class="container py-lg-5 py-sm-4">
+            
+            <!-- Хлебные крошки -->
+            <div class="col-lg-8 col-xl-9 d-flex justify-content-start">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
+                        <li class="breadcrumb-item active" aria-current="page"><a href="https://novipovorot.pp.ua/about.html">Отзывы</a></li>
+                    </ol>
+                </nav>
+            </div>
+            <!-- //Хлебные крошки -->
+            
             <div class="row">
                 <div class="col-lg-6 about-left">
                     <h3 class="mt-lg-3">Оставьте Отзывы, <strong>О Путешествиях Вместе С Нами!</strong>
