--- a/packages.html
+++ b/packages.html
@@ -87,7 +87,7 @@
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Туры</a></li>
+                        <li class="breadcrumb-item active" aria-current="page"><a href="https://novipovorot.pp.ua/packages.html">Туры</a></li>
                     </ol>
                 </nav>
             </div>
