--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
-                        <li class="breadcrumb-item active" aria-current="page"><a href="https://novipovorot.pp.ua/about.html">Отзывы</a></li>
+                        <li class="breadcrumb-item active" aria-current="page"><a class="text-secondary" href="https://novipovorot.pp.ua/about.html">Отзывы</a></li>
                     </ol>
                 </nav>
             </div>
