--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -85,7 +85,7 @@
                   <ol class="breadcrumb">
                      <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>		  
                      <li class="breadcrumb-item"><a class="text-primary" href="https://novipovorot.pp.ua/packages.html">Туры</a></li>
-		     <li class="breadcrumb-item active" aria-current="page">Туры, стр.2</li>
+		     <li class="breadcrumb-item active" aria-current="page"><a class="text-secondary" href="https://novipovorot.pp.ua/packages-page-two.html">Туры, стр.2</a></li>
                   </ol>
                 </nav>
                </div>
