--- a/contact.html
+++ b/contact.html
@@ -78,6 +78,18 @@
     <!-- Contact -->
     <section class="contact py-5">
         <div class="container py-lg-5 py-sm-3">
+            
+            <!-- Хлебные крошки -->
+            <div class="col-lg-8 col-xl-9 d-flex justify-content-start">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
+                        <li class="breadcrumb-item active" aria-current="page"><a class="text-secondary" href="https://novipovorot.pp.ua/contact.html">Контакты</a></li>
+                    </ol>
+                </nav>
+            </div>
+            <!-- //Хлебные крошки -->
+            
             <h2 class="heading text-capitalize text-center mb-sm-5 mb-4"> Свяжитесь С Нами</h2>
             <ul class="list-unstyled row text-center mt-lg-5 mt-4 px-lg-5">
                 <li class="col-md-4 col-sm-6 adress-w3pvt-info">
