--- a/booking.html
+++ b/booking.html
@@ -83,7 +83,7 @@
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb">
                      <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>		  
-                     <li class="breadcrumb-item"><a class="text-primary" href="https://novipovorot.pp.ua/booking.html">Забронировать</a></li>
+                     <li class="breadcrumb-item"><a  class="text-secondary" href="https://novipovorot.pp.ua/booking.html">Забронировать</a></li>
                   </ol>
                 </nav>
                </div>
