--- a/booking.html
+++ b/booking.html
@@ -91,8 +91,8 @@
             
             <h2 class="heading text-capitalize text-center mb-lg-5 mb-4">Забронируйте Тур</h2>
             <div class="contact-grids">
-                <div class="row" style="justify-content: center;">
-                    <div class="col-lg-7 contact-left-form">
+                <div class="row">
+                    <div class="col-lg-12 contact-left-form">
                         <form action="https://formspree.io/f/meqpdplq" method="post" class="row">
                             <div class="col-sm-6 form-group contact-forms">
                                 <input type="text" name="Имя" class="form-control" placeholder="Имя" required>
@@ -163,8 +163,8 @@
                                 <textarea name="Сообщение" class="form-control" placeholder="Сообщение" rows="3"
                                     required></textarea>
                             </div>
-                            <div class="col-md-12 booking-button">
-                                <button class="btn btn-block sent-butnn">Забронировать Сейчас</button>
+                            <div class="col-md-12  d-flex justify-content-center  booking-button">
+                                <button class="col-md-6 btn btn-block sent-butnn">Забронировать Сейчас</button>
                             </div>
                         </form>
                     </div>
