--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -45,6 +45,16 @@
         href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
     <!-- //google fonts -->
+	<style>
+	       .txt-yelw-shdw {
+		    display: block;
+		    font-size: 1.5em;
+		    font-weight: bold;
+		    color: yellow;
+		    text-shadow: 1px 1px 3px black;
+		   /* font-family: "Fira Sans", "Source Sans Pro", Helvetica, Arial, sans-serif;*/
+		}
+	</style>
 </head>
   <body>
 
@@ -116,7 +126,7 @@
                             </ul>
                         </div>
                         
-                        <h4 class="mb-3">
+                        <h4 class="mb-3 txt-yelw-shdw">
 			    ДЖАРЫЛГАЧ - УКРАИНСКИЕ МАЛЬДИВЫ. СОКРОВИЩА ОСТРОВОВ И МАЯКИ. <span id="OleshkovskyDesert">БЕСКРАЙНЯЯ ОЛЕШКОВСКАЯ ПУСТЫНЯ</span>. 
                         </h4>
                         
