--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -51,7 +51,7 @@
 		    font-size: 1.5em;
 		    font-weight: bold;
 		    color: yellow;
-		    text-shadow: 1px 1px 3px black;
+		    text-shadow: 1px 1px 3px blue;
 		   /* font-family: "Fira Sans", "Source Sans Pro", Helvetica, Arial, sans-serif;*/
 		}
 	</style>
