--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -54,6 +54,13 @@
 		    text-shadow: 1px 1px 3px #007bff;
 		   /* font-family: "Fira Sans", "Source Sans Pro", Helvetica, Arial, sans-serif;*/
 		}
+		
+		.box-info {
+		    color: rgba(127, 63, 191, 1.0);
+		    box-shadow: 4px 1px 0px -1px rgba(63, 191, 191, 1.0) inset; 
+		    padding: 5px;
+		    background: rgba(63, 191, 191, 0.4);
+		}
 	</style>
 </head>
   <body>
@@ -141,7 +148,7 @@
                           Морские путешествия с прогулками на катерах каждый день! Этот <span id="tourism">туризм</span> - отдых для тебя! 
                         </p>
                          <div id="MoreDetails" style="display: none;">
-                         <p class="p-2 bg-warning text-white txt-alg-jf">
+                         <p class="box-info txt-alg-jf">
                            МЕСТ ОЧЕНЬ МАЛО, ПОСПЕШИ, 
                            НА ТУР УЖЕ ЗАПИСАЛИСЬ 4 ЧЕЛОВЕКА ДО ТОГО КАК ТЫ О НЕМ ПРОЧИТАЛ,
                            ВЕДЬ НА ЭКСКУРСИЯХ МЫ ДЕЛАЕМ АНОНСЫ ТУРИСТАМ!  КТО ДОЛГО ДУМАЕТ,
