--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -57,9 +57,9 @@
 		
 		.box-info {
 		    color: rgba(127, 63, 191, 1.0);
-		    box-shadow: 4px 1px 0px -1px rgba(63, 191, 191, 1.0) inset; 
+		    box-shadow: 4px 1px 0px -1px rgba(191, 63, 191, 1.0); inset; 
 		    padding: 20px;
-		    background: rgba(63, 191, 191, 0.2);
+		    background: rgba(191, 63, 191, 0.4);
 		}
 	</style>
 </head>
