--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -56,7 +56,7 @@
 		}
 		
 		.box-info {
-		    color: rgba(127, 63, 191, 1.0);
+		    color: white;
 		    box-shadow: 4px 1px 0px -1px rgba(191, 63, 191, 1.0) inset; 
 		    padding: 20px;
 		    background: rgba(191, 63, 191, 0.4);
