--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -59,7 +59,7 @@
 		    color: rgba(191, 63, 191, 1.0);
 		    box-shadow: 4px 1px 0px -1px rgba(191, 63, 191, 1.0) inset; 
 		    padding: 20px;
-		    background: rgba(191, 63, 191, 0.4);
+		    /*background: rgba(191, 63, 191, 0.4);*/
 		}
 	</style>
 </head>
@@ -149,8 +149,8 @@
                         </p>
                          <div id="MoreDetails" style="display: none;">
                          <p class="box-info txt-alg-jf">
-                           МЕСТ ОЧЕНЬ МАЛО, ПОСПЕШИ, 
-                           НА ТУР УЖЕ ЗАПИСАЛИСЬ 4 ЧЕЛОВЕКА ДО ТОГО КАК ТЫ О НЕМ ПРОЧИТАЛ,
+                           МЕСТ ОЧЕНЬ МАЛО, ПОСПЕШИ! 
+                           НА ТУР УЖЕ ЗАПИСАЛИСЬ 4 ЧЕЛОВЕКА, ДО ТОГО КАК ТЫ О НЕМ ПРОЧИТАЛ,
                            ВЕДЬ НА ЭКСКУРСИЯХ МЫ ДЕЛАЕМ АНОНСЫ ТУРИСТАМ!  КТО ДОЛГО ДУМАЕТ,
                            СИДИТ ДОМА И МЕЧТАЕТ! БЫСТРО В ЛИЧКУ, ЖДУ. 
                          </p>
