--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -125,7 +125,7 @@
                         </h4>
                         
 			 <p class="p-2 bg-success text-white">
-				Благотворительная Акция - накорми ЛЬВА!
+				Благотворительная Акция - накорми ЛЬВА! &#x1F981;
 				<img src="/images/Emoji/1f600.png" alt="smile" height="20px">
 			 </p>
 			   
