--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -148,7 +148,7 @@
 				от поездки*(от прибыли ТА) передаст Центру Пылышенко на питание львам!
                       	   </p>
 			   <p class="txt-alg-jf">
-                            	Увидеть спортивных лошадок, занимающих призовые места 
+                            	Увидеть спортивных лошадок &#128014; занимающих призовые места 
 				на междугородных конкурсах. Покормить их бубликами и сеном.
 				 Покататься на лошадке и получить массу удовольствия! 
 				Ждем Вас, Ваших родных, близких и друзей на экскурсию! 
