--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -148,12 +148,12 @@
 				от поездки*(от прибыли ТА) передаст Центру Пылышенко на питание львам!
                       	   </p>
 			   <p class="txt-alg-jf">
-                            	Увидеть спортивных лошадок &#128014; занимающих призовые места 
-				на междугородных конкурсах. Покормить их бубликами и сеном.
+                            	Увидеть спортивных лошадок &#128014; занимающих призовые места &#127942;
+				на международных конкурсах. Покормить их бубликами и сеном.
 				 Покататься на лошадке и получить массу удовольствия! 
 				Ждем Вас, Ваших родных, близких и друзей на экскурсию! 
-				Собери компанию 10 человек, 11 едет бесплатно   
-				<img src="/images/Emoji/1f606.png" alt="smile" height="20px">
+				Собери компанию 10 человек, 11 едет бесплатно  &#127881; &#127882;
+				<!--<img src="/images/Emoji/1f606.png" alt="smile" height="20px">-->
                            </p>
 		        </div>
                         <p id="MoreDetailsHide" onclick="document.getElementById('MoreDetails').style.display='block'; document.getElementById('MoreDetailsHide').style.display='none'"
