--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -151,7 +151,7 @@
                             	Увидеть спортивных лошадок &#128014; занимающих призовые места &#127942;
 				на международных конкурсах. Покормить их бубликами и сеном.
 				 Покататься на лошадке и получить массу удовольствия! 
-				Ждем Вас, Ваших родных, близких и друзей на экскурсию! 
+				Ждем Вас, Ваших родных, близких и друзей на экскурсию! &#128519;
 				Собери компанию 10 человек, 11 едет бесплатно  &#127881; &#127882;
 				<!--<img src="/images/Emoji/1f606.png" alt="smile" height="20px">-->
                            </p>
