--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -133,8 +133,8 @@
 				За 1 день <span id="ExcursionToZaporozhye">экскурсии из <span id="Zaporozhye">Запорожья</span></span>
 				с нами ВЫ получите заряд здоровья и отличного настроения,
                                 забудете Ваши печали и заботы, проведете время <span id="travels">путешествуя</span>
-				с близкими! Безопасно, комфортно, весело <span id="tourism">в туризме</span>!
-				<img src="/images/Emoji/1f604.png" alt="smile" height="20px">
+				с близкими! Безопасно, комфортно, весело <span id="tourism">в туризме</span>! &#128518;
+				<!--<img src="/images/Emoji/1f604.png" alt="smile" height="20px">-->
                         </p>
 			<div id="MoreDetails" style="display: none;">
                            <p class="p-2 bg-light">
