--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -141,8 +141,8 @@
 				35 дней в клетке со львами, 16 лет Реабилитационного Центра,
 				беcчисленное количество спасенных жизней животных - 
 				Александр Пылышенко гордость нашего Запорожского края!
-				Едем в Зоопарк созданный его семьей, любоваться малышами 
-				львятками, енотиками, тиграми, львами и другими воспитанниками! 
+				Едем в Зоопарк созданный его семьей, любоваться малышами львятками, енотиками				львятками, енотиками 	
+                                &#129437; тиграми &#128005; львами &#129409; и другими воспитанниками! 
 				Все кто едет с нами кроме оплаты входного билета в Центр Пылышенко
 				дарят дополнительные средства, а именно Новый поворот 50%
 				от поездки*(от прибыли ТА) передаст Центру Пылышенко на питание львам!
