--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -275,8 +275,8 @@
                                     <div class="card-body txt-alg-jf">
 					    
                                         <p><strong>09:20  </strong>
-                                            Выезд с центра Запорожья после минутки позитива. 
-					    <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
+                                            Выезд с центра Запорожья после минутки позитива. &#128512;
+					   <!-- <img src="/images/Emoji/1f642.png" alt="smile" height="20px">-->
                                             Фестивальная - Советская - Автовокзал заберем Вас в этих местах и в путь!
                                         </p>
 					    
@@ -291,7 +291,7 @@
                                             Мы в Центре Пылышенко, слушаем удивительную историю создания 
 					    Зоопарка и знакомимся с животными: милыми мишками, смешными енотиками, 
 					    величественными тирами и конечно грациозными львами! Делаем самые красивые 
-					    фото на память. Посещаем уютное кафе с хот - догами, картшкой фри, мороженным и  кофе.
+					    фото на память. Посещаем уютное кафе  с хот - догами &#127789; картшкой фри &#127839; мороженным &#127848; и  кофе &#9749;
 					    Кого же мы увидим: смешных енотиков, быструю носуху, красивейших тигров и львов,
 					    ведь в зоопарке они живут семьями, белого тигра, рысь, гепарда, дикую кошку,
 					    обезьянок, попугайчиков, огромных и добрых мясоедов, сластен мишек и еще много разных 
@@ -299,8 +299,8 @@
 					    Оставляем денежку от Нас на питание животным и продолжаем свой путь.
                                         </p>
                                         <p><strong>16:40 </strong>
-                                           Мы уже в Запорожье, довольные 
-						<img src="/images/Emoji/1f607.png" alt="smile" height="20px">
+                                           Мы уже в Запорожье, довольные &#128519;
+						<!--<img src="/images/Emoji/1f607.png" alt="smile" height="20px">-->
 					   возвращаемся домой чтоб поделится впечатлениями 
 				  	   с друзьями и близкими (но еще лучше их взять с собой). 
                                         </p>
