--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -193,8 +193,9 @@
                             <hr>
 			   <i>
 			     Места в транспорте по датам оплат, раньше платишь, ближе к водителю 
-			     едешь - 1 кто забронировал, выбирает где сидит &#128518;
+			     едешь - 1 кто забронировал, выбирает где сидит
 			     <!--<img src="/images/Emoji/1f606.png" alt="smile" height="20px">-->
+                              &#128518;
 			   </i>   
                         </div>
                         <!-- //Alert info -->
@@ -291,7 +292,7 @@
                                             Мы в Центре Пылышенко, слушаем удивительную историю создания 
 					    Зоопарка и знакомимся с животными: милыми мишками, смешными енотиками, 
 					    величественными тирами и конечно грациозными львами! Делаем самые красивые 
-					    фото на память. Посещаем уютное кафе  с хот - догами &#127789; картшкой фри &#127839; мороженным &#127848; и  кофе &#9749;
+					    фото на память. Посещаем уютное кафе  с хот - догами &#127789; картошкой фри &#127839; мороженным &#127848; и  кофе &#9749;
 					    Кого же мы увидим: смешных енотиков, быструю носуху, красивейших тигров и львов,
 					    ведь в зоопарке они живут семьями, белого тигра, рысь, гепарда, дикую кошку,
 					    обезьянок, попугайчиков, огромных и добрых мясоедов, сластен мишек и еще много разных 
