--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -454,8 +454,8 @@
                                     самое замечательное настроение;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    доброе дело, которое делаете вы помогая животным! 
-				    <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
+                                    доброе дело, которое делаете вы помогая животным! &#128578;
+				    <!-- <img src="/images/Emoji/1f642.png" alt="smile" height="20px">-->
                                 </li>
                             </ul>
                         </div>
