--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -125,7 +125,8 @@
                         </h4>
                         
 			 <p class="p-2 bg-success text-white">
-				Благотворительная Акция - накорми ЛЬВА! <!-- &#x1F981; &#128521;-->
+				Благотворительная Акция - накорми ЛЬВА!
+				<img src="/images/Emoji/129409.png" alt="smile" height="20px">
 				<img src="/images/Emoji/1f600.png" alt="smile" height="20px">
 			 </p>
 			   
@@ -148,7 +149,9 @@
 				от поездки*(от прибыли ТА) передаст Центру Пылышенко на питание львам!
                       	   </p>
 			   <p class="txt-alg-jf">
-                            	Увидеть спортивных лошадок <!--&#128014; -->занимающих призовые места <!--&#127942;-->
+                            	Увидеть спортивных лошадок 
+				   <img src="/images/Emoji/128014.png" alt="smile" height="20px"> занимающих призовые места
+				   <img src="/images/Emoji/127942.png" alt="smile" height="20px">
 				на международных конкурсах. Покормить их бубликами и сеном.
 				 Покататься на лошадке и получить массу удовольствия! <!--&#128519;-->
 				Ждем Вас, Ваших родных, близких и друзей на экскурсию! 
